syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator";
option java_multiple_files = true;

//Request suffix on Request
message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

//Response suffix on Response
message SumResponse {
    int32 result = 1;
}

message PrimeNumberDecompositionRequest {
    int64 number = 1;
}

message PrimeNumberDecompositionResponse {
    int64 prime_factor = 1;
}

message ComputeAverageRequest {
    int32 number = 1;
}

message ComputeAverageResponse {
    double average = 1;
}

message FindMaxRequest {
    int32 number = 1;
}

message FindMaxResponse {
    int32 max = 1;
}


message SquareRootRequest {
    int32 number = 1;
}

message SquareRootResponse {
    double number_root = 1;
}

service CalculatorService {
    //Unary
    rpc Sum(SumRequest) returns (SumResponse) {};
    //Server Streaming
    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse) {};
    //Client Streaming
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse) {};
    //Bi-directional Stremining
    rpc FindMax(stream FindMaxRequest) returns (stream FindMaxResponse) {};

    //Error Handling (it will throw exception if the sent number is negetive)
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {};
}